FIX header overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    /*Fix header overlapping*/
+    scroll-padding-top: 51px;
 }
 
 body {
